parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> lista_declaracion
Rule 1     lista_declaracion -> declaracion
Rule 2     lista_declaracion -> lista_declaracion declaracion
Rule 3     declaracion -> declaracion_insert
Rule 4     declaracion -> declaracion_select
Rule 5     declaracion -> declaracion_delete
Rule 6     declaracion -> declaracion_update
Rule 7     declaracion_insert -> INSERT INTO ID PARENI lista_id PAREND VALUES PARENI lista_expr PAREND SEMI
Rule 8     declaracion_delete -> DELETE FROM ID
Rule 9     declaracion_delete -> DELETE MULT FROM ID
Rule 10    declaracion_delete -> DELETE FROM ID WHERE columna_seleccion EQ atom SEMI
Rule 11    declaracion_delete -> DELETE FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
Rule 12    declaracion_delete -> DELETE FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
Rule 13    declaracion_delete -> DELETE FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
Rule 14    declaracion_delete -> DELETE FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
Rule 15    declaracion_delete -> DELETE FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
Rule 16    declaracion_delete -> DELETE FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
Rule 17    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MYQ atom SEMI
Rule 18    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MYE atom SEMI
Rule 19    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MNQ atom SEMI
Rule 20    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MNE atom SEMI
Rule 21    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion EQ atom SEMI
Rule 22    declaracion_update -> UPDATE ID SET columna_seleccion EQ columna_seleccion SUMA atom WHERE columna_seleccion EQ atom SEMI
Rule 23    declaracion_update -> UPDATE ID SET columna_seleccion EQ columna_seleccion RESTA atom WHERE columna_seleccion EQ atom SEMI
Rule 24    declaracion_update -> UPDATE ID SET columna_seleccion EQ columna_seleccion MULT atom WHERE columna_seleccion EQ atom SEMI
Rule 25    declaracion_update -> UPDATE ID SET columna_seleccion EQ columna_seleccion DIVIDE atom WHERE columna_seleccion EQ atom SEMI
Rule 26    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MYQ atom SEMI
Rule 27    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MYE atom SEMI
Rule 28    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MNQ atom SEMI
Rule 29    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MNE atom SEMI
Rule 30    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion EQ atom SEMI
Rule 31    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion NE atom SEMI
Rule 32    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MYQ NUMERO SEMI
Rule 33    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MYE NUMERO SEMI
Rule 34    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MNQ NUMERO SEMI
Rule 35    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MNE NUMERO SEMI
Rule 36    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion EQ NUMERO SEMI
Rule 37    declaracion_update -> UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion NE NUMERO SEMI
Rule 38    declaracion_select -> SELECT columna_seleccion FROM ID opr_clausula_where opr_clausula_orderby
Rule 39    columna_seleccion -> MULT
Rule 40    columna_seleccion -> lista_id
Rule 41    opr_clausula_where -> WHERE condicion_buscada
Rule 42    opr_clausula_where -> <empty>
Rule 43    condicion_buscada -> condicion_buscada OR condicion_buscada
Rule 44    condicion_buscada -> condicion_buscada AND condicion_buscada
Rule 45    condicion_buscada -> NOT condicion_buscada
Rule 46    condicion_buscada -> PARENI condicion_buscada PAREND
Rule 47    condicion_buscada -> predicado
Rule 48    predicado -> comparacion_predicado
Rule 49    comparacion_predicado -> exp_escalar EQ exp_escalar
Rule 50    comparacion_predicado -> exp_escalar NE exp_escalar
Rule 51    comparacion_predicado -> exp_escalar MNQ exp_escalar
Rule 52    comparacion_predicado -> exp_escalar MNE exp_escalar
Rule 53    comparacion_predicado -> exp_escalar MYQ exp_escalar
Rule 54    comparacion_predicado -> exp_escalar MYE exp_escalar
Rule 55    exp_escalar -> exp_escalar SUMA exp_escalar
Rule 56    exp_escalar -> exp_escalar RESTA exp_escalar
Rule 57    exp_escalar -> exp_escalar MULT exp_escalar
Rule 58    exp_escalar -> exp_escalar DIVIDE exp_escalar
Rule 59    exp_escalar -> atom
Rule 60    exp_escalar -> PARENI exp_escalar PAREND
Rule 61    atom -> NUMERO
Rule 62    atom -> ID
Rule 63    atom -> STRING
Rule 64    opr_clausula_orderby -> ORDER BY ID
Rule 65    opr_clausula_orderby -> <empty>
Rule 66    lista_id -> ID
Rule 67    lista_id -> lista_id COMA ID
Rule 68    lista_expr -> expr
Rule 69    lista_expr -> lista_expr COMA expr
Rule 70    expr -> expr SUMA term
Rule 71    expr -> expr RESTA term
Rule 72    expr -> term
Rule 73    expr -> ID
Rule 74    expr -> STRING
Rule 75    term -> term MULT factor
Rule 76    term -> term DIVIDE factor
Rule 77    term -> factor
Rule 78    factor -> NUMERO
Rule 79    factor -> PARENI expr PAREND

Terminals, with rules where they appear

AND                  : 11 12 12 15 16 44
BY                   : 64
COMA                 : 26 27 28 29 30 31 32 32 33 33 34 34 35 35 36 36 37 37 67 69
DELETE               : 8 9 10 11 12 13 14 15 16
DIVIDE               : 25 58 76
EQ                   : 10 11 11 12 12 12 13 13 14 14 14 15 15 15 16 16 16 17 18 19 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 30 31 31 32 32 32 33 33 33 34 34 34 35 35 35 36 36 36 36 37 37 37 49
FROM                 : 8 9 10 11 12 13 14 15 16 38
ID                   : 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 62 64 66 67 73
INSERT               : 7
INTO                 : 7
MNE                  : 20 29 35 52
MNQ                  : 19 28 34 51
MULT                 : 9 24 39 57 75
MYE                  : 18 27 33 54
MYQ                  : 17 26 32 53
NE                   : 31 37 50
NOT                  : 45
NUMERO               : 32 32 33 33 34 34 35 35 36 36 37 37 61 78
OR                   : 13 14 14 15 16 43
ORDER                : 64
PAREND               : 7 7 46 60 79
PARENI               : 7 7 46 60 79
RESTA                : 23 56 71
SELECT               : 38
SEMI                 : 7 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
SET                  : 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
STRING               : 63 74
SUMA                 : 22 32 33 34 35 36 37 55 70
UPDATE               : 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
VALUES               : 7
WHERE                : 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 41
error                : 

Nonterminals, with rules where they appear

atom                 : 10 11 11 12 12 12 13 13 14 14 14 15 15 15 16 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 26 27 27 27 28 28 28 29 29 29 30 30 30 31 31 31 32 32 33 33 34 34 35 35 36 36 37 37 59
columna_seleccion    : 10 11 11 12 12 12 13 13 14 14 14 15 15 15 16 16 16 17 17 18 18 19 19 20 20 21 21 22 22 22 23 23 23 24 24 24 25 25 25 26 26 26 27 27 27 28 28 28 29 29 29 30 30 30 31 31 31 32 32 32 32 32 33 33 33 33 33 34 34 34 34 34 35 35 35 35 35 36 36 36 36 36 37 37 37 37 37 38
comparacion_predicado : 48
condicion_buscada    : 41 43 43 44 44 45 46
declaracion          : 1 2
declaracion_delete   : 5
declaracion_insert   : 3
declaracion_select   : 4
declaracion_update   : 6
exp_escalar          : 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 60
expr                 : 68 69 70 71 79
factor               : 75 76 77
lista_declaracion    : 2 0
lista_expr           : 7 69
lista_id             : 7 40 67
opr_clausula_orderby : 38
opr_clausula_where   : 38
predicado            : 47
term                 : 70 71 72 75 76

Parsing method: LALR

state 0

    (0) S' -> . lista_declaracion
    (1) lista_declaracion -> . declaracion
    (2) lista_declaracion -> . lista_declaracion declaracion
    (3) declaracion -> . declaracion_insert
    (4) declaracion -> . declaracion_select
    (5) declaracion -> . declaracion_delete
    (6) declaracion -> . declaracion_update
    (7) declaracion_insert -> . INSERT INTO ID PARENI lista_id PAREND VALUES PARENI lista_expr PAREND SEMI
    (38) declaracion_select -> . SELECT columna_seleccion FROM ID opr_clausula_where opr_clausula_orderby
    (8) declaracion_delete -> . DELETE FROM ID
    (9) declaracion_delete -> . DELETE MULT FROM ID
    (10) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom SEMI
    (11) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
    (12) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
    (13) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
    (14) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
    (15) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
    (16) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
    (17) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MYQ atom SEMI
    (18) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MYE atom SEMI
    (19) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MNQ atom SEMI
    (20) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MNE atom SEMI
    (21) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion EQ atom SEMI
    (22) declaracion_update -> . UPDATE ID SET columna_seleccion EQ columna_seleccion SUMA atom WHERE columna_seleccion EQ atom SEMI
    (23) declaracion_update -> . UPDATE ID SET columna_seleccion EQ columna_seleccion RESTA atom WHERE columna_seleccion EQ atom SEMI
    (24) declaracion_update -> . UPDATE ID SET columna_seleccion EQ columna_seleccion MULT atom WHERE columna_seleccion EQ atom SEMI
    (25) declaracion_update -> . UPDATE ID SET columna_seleccion EQ columna_seleccion DIVIDE atom WHERE columna_seleccion EQ atom SEMI
    (26) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MYQ atom SEMI
    (27) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MYE atom SEMI
    (28) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MNQ atom SEMI
    (29) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MNE atom SEMI
    (30) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion EQ atom SEMI
    (31) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion NE atom SEMI
    (32) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MYQ NUMERO SEMI
    (33) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MYE NUMERO SEMI
    (34) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MNQ NUMERO SEMI
    (35) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MNE NUMERO SEMI
    (36) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion EQ NUMERO SEMI
    (37) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion NE NUMERO SEMI

    INSERT          shift and go to state 7
    SELECT          shift and go to state 8
    DELETE          shift and go to state 9
    UPDATE          shift and go to state 10

    lista_declaracion              shift and go to state 1
    declaracion                    shift and go to state 2
    declaracion_insert             shift and go to state 3
    declaracion_select             shift and go to state 4
    declaracion_delete             shift and go to state 5
    declaracion_update             shift and go to state 6

state 1

    (0) S' -> lista_declaracion .
    (2) lista_declaracion -> lista_declaracion . declaracion
    (3) declaracion -> . declaracion_insert
    (4) declaracion -> . declaracion_select
    (5) declaracion -> . declaracion_delete
    (6) declaracion -> . declaracion_update
    (7) declaracion_insert -> . INSERT INTO ID PARENI lista_id PAREND VALUES PARENI lista_expr PAREND SEMI
    (38) declaracion_select -> . SELECT columna_seleccion FROM ID opr_clausula_where opr_clausula_orderby
    (8) declaracion_delete -> . DELETE FROM ID
    (9) declaracion_delete -> . DELETE MULT FROM ID
    (10) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom SEMI
    (11) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
    (12) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
    (13) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
    (14) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
    (15) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
    (16) declaracion_delete -> . DELETE FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
    (17) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MYQ atom SEMI
    (18) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MYE atom SEMI
    (19) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MNQ atom SEMI
    (20) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion MNE atom SEMI
    (21) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom WHERE columna_seleccion EQ atom SEMI
    (22) declaracion_update -> . UPDATE ID SET columna_seleccion EQ columna_seleccion SUMA atom WHERE columna_seleccion EQ atom SEMI
    (23) declaracion_update -> . UPDATE ID SET columna_seleccion EQ columna_seleccion RESTA atom WHERE columna_seleccion EQ atom SEMI
    (24) declaracion_update -> . UPDATE ID SET columna_seleccion EQ columna_seleccion MULT atom WHERE columna_seleccion EQ atom SEMI
    (25) declaracion_update -> . UPDATE ID SET columna_seleccion EQ columna_seleccion DIVIDE atom WHERE columna_seleccion EQ atom SEMI
    (26) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MYQ atom SEMI
    (27) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MYE atom SEMI
    (28) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MNQ atom SEMI
    (29) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MNE atom SEMI
    (30) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion EQ atom SEMI
    (31) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion NE atom SEMI
    (32) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MYQ NUMERO SEMI
    (33) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MYE NUMERO SEMI
    (34) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MNQ NUMERO SEMI
    (35) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MNE NUMERO SEMI
    (36) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion EQ NUMERO SEMI
    (37) declaracion_update -> . UPDATE ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion NE NUMERO SEMI

    INSERT          shift and go to state 7
    SELECT          shift and go to state 8
    DELETE          shift and go to state 9
    UPDATE          shift and go to state 10

    declaracion                    shift and go to state 11
    declaracion_insert             shift and go to state 3
    declaracion_select             shift and go to state 4
    declaracion_delete             shift and go to state 5
    declaracion_update             shift and go to state 6

state 2

    (1) lista_declaracion -> declaracion .

    INSERT          reduce using rule 1 (lista_declaracion -> declaracion .)
    SELECT          reduce using rule 1 (lista_declaracion -> declaracion .)
    DELETE          reduce using rule 1 (lista_declaracion -> declaracion .)
    UPDATE          reduce using rule 1 (lista_declaracion -> declaracion .)
    $end            reduce using rule 1 (lista_declaracion -> declaracion .)


state 3

    (3) declaracion -> declaracion_insert .

    INSERT          reduce using rule 3 (declaracion -> declaracion_insert .)
    SELECT          reduce using rule 3 (declaracion -> declaracion_insert .)
    DELETE          reduce using rule 3 (declaracion -> declaracion_insert .)
    UPDATE          reduce using rule 3 (declaracion -> declaracion_insert .)
    $end            reduce using rule 3 (declaracion -> declaracion_insert .)


state 4

    (4) declaracion -> declaracion_select .

    INSERT          reduce using rule 4 (declaracion -> declaracion_select .)
    SELECT          reduce using rule 4 (declaracion -> declaracion_select .)
    DELETE          reduce using rule 4 (declaracion -> declaracion_select .)
    UPDATE          reduce using rule 4 (declaracion -> declaracion_select .)
    $end            reduce using rule 4 (declaracion -> declaracion_select .)


state 5

    (5) declaracion -> declaracion_delete .

    INSERT          reduce using rule 5 (declaracion -> declaracion_delete .)
    SELECT          reduce using rule 5 (declaracion -> declaracion_delete .)
    DELETE          reduce using rule 5 (declaracion -> declaracion_delete .)
    UPDATE          reduce using rule 5 (declaracion -> declaracion_delete .)
    $end            reduce using rule 5 (declaracion -> declaracion_delete .)


state 6

    (6) declaracion -> declaracion_update .

    INSERT          reduce using rule 6 (declaracion -> declaracion_update .)
    SELECT          reduce using rule 6 (declaracion -> declaracion_update .)
    DELETE          reduce using rule 6 (declaracion -> declaracion_update .)
    UPDATE          reduce using rule 6 (declaracion -> declaracion_update .)
    $end            reduce using rule 6 (declaracion -> declaracion_update .)


state 7

    (7) declaracion_insert -> INSERT . INTO ID PARENI lista_id PAREND VALUES PARENI lista_expr PAREND SEMI

    INTO            shift and go to state 12


state 8

    (38) declaracion_select -> SELECT . columna_seleccion FROM ID opr_clausula_where opr_clausula_orderby
    (39) columna_seleccion -> . MULT
    (40) columna_seleccion -> . lista_id
    (66) lista_id -> . ID
    (67) lista_id -> . lista_id COMA ID

    MULT            shift and go to state 15
    ID              shift and go to state 14

    columna_seleccion              shift and go to state 13
    lista_id                       shift and go to state 16

state 9

    (8) declaracion_delete -> DELETE . FROM ID
    (9) declaracion_delete -> DELETE . MULT FROM ID
    (10) declaracion_delete -> DELETE . FROM ID WHERE columna_seleccion EQ atom SEMI
    (11) declaracion_delete -> DELETE . FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
    (12) declaracion_delete -> DELETE . FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI
    (13) declaracion_delete -> DELETE . FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
    (14) declaracion_delete -> DELETE . FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
    (15) declaracion_delete -> DELETE . FROM ID WHERE columna_seleccion EQ atom AND columna_seleccion EQ atom OR columna_seleccion EQ atom SEMI
    (16) declaracion_delete -> DELETE . FROM ID WHERE columna_seleccion EQ atom OR columna_seleccion EQ atom AND columna_seleccion EQ atom SEMI

    FROM            shift and go to state 17
    MULT            shift and go to state 18


state 10

    (17) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom WHERE columna_seleccion MYQ atom SEMI
    (18) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom WHERE columna_seleccion MYE atom SEMI
    (19) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom WHERE columna_seleccion MNQ atom SEMI
    (20) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom WHERE columna_seleccion MNE atom SEMI
    (21) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom WHERE columna_seleccion EQ atom SEMI
    (22) declaracion_update -> UPDATE . ID SET columna_seleccion EQ columna_seleccion SUMA atom WHERE columna_seleccion EQ atom SEMI
    (23) declaracion_update -> UPDATE . ID SET columna_seleccion EQ columna_seleccion RESTA atom WHERE columna_seleccion EQ atom SEMI
    (24) declaracion_update -> UPDATE . ID SET columna_seleccion EQ columna_seleccion MULT atom WHERE columna_seleccion EQ atom SEMI
    (25) declaracion_update -> UPDATE . ID SET columna_seleccion EQ columna_seleccion DIVIDE atom WHERE columna_seleccion EQ atom SEMI
    (26) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MYQ atom SEMI
    (27) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MYE atom SEMI
    (28) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MNQ atom SEMI
    (29) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion MNE atom SEMI
    (30) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion EQ atom SEMI
    (31) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ atom WHERE columna_seleccion NE atom SEMI
    (32) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MYQ NUMERO SEMI
    (33) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MYE NUMERO SEMI
    (34) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MNQ NUMERO SEMI
    (35) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion MNE NUMERO SEMI
    (36) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion EQ NUMERO SEMI
    (37) declaracion_update -> UPDATE . ID SET columna_seleccion EQ atom COMA columna_seleccion EQ columna_seleccion SUMA NUMERO COMA columna_seleccion EQ atom WHERE columna_seleccion NE NUMERO SEMI

    ID              shift and go to state 19


state 11

    (2) lista_declaracion -> lista_declaracion declaracion .

    INSERT          reduce using rule 2 (lista_declaracion -> lista_declaracion declaracion .)
    SELECT          reduce using rule 2 (lista_declaracion -> lista_declaracion declaracion .)
    DELETE          reduce using rule 2 (lista_declaracion -> lista_declaracion declaracion .)
    UPDATE          reduce using rule 2 (lista_declaracion -> lista_declaracion declaracion .)
    $end            reduce using rule 2 (lista_declaracion -> lista_declaracion declaracion .)


state 12

    (7) declaracion_insert -> INSERT INTO . ID PARENI lista_id PAREND VALUES PARENI lista_expr PAREND SEMI

    ID              shift and go to state 20


state 13

    (38) declaracion_select -> SELECT columna_seleccion . FROM ID opr_clausula_where opr_clausula_orderby

    FROM            shift and go to state 21


state 14

    (66) lista_id -> ID .

    COMA            reduce using rule 66 (lista_id -> ID .)
    FROM            reduce using rule 66 (lista_id -> ID .)
    EQ              reduce using rule 66 (lista_id -> ID .)
    PAREND          reduce using rule 66 (lista_id -> ID .)
    MYQ             reduce using rule 66 (lista_id -> ID .)
    MYE             reduce using rule 66 (lista_id -> ID .)
    MNQ             reduce using rule 66 (lista_id -> ID .)
    MNE             reduce using rule 66 (lista_id -> ID .)
    NE              reduce using rule 66 (lista_id -> ID .)


state 15

    (39) columna_seleccion -> MULT .

    FROM            reduce using rule 39 (columna_seleccion -> MULT .)
    EQ              reduce using rule 39 (columna_seleccion -> MULT .)
    SUMA            reduce using rule 39 (columna_seleccion -> MULT .)
    RESTA           reduce using rule 39 (columna_seleccion -> MULT .)
    MULT            reduce using rule 39 (columna_seleccion -> MULT .)
    DIVIDE          reduce using rule 39 (columna_seleccion -> MULT .)
    MYQ             reduce using rule 39 (columna_seleccion -> MULT .)
    MYE             reduce using rule 39 (columna_seleccion -> MULT .)
    MNQ             reduce using rule 39 (columna_seleccion -> MULT .)
    MNE             reduce using rule 39 (columna_seleccion -> MULT .)
    NE              reduce using rule 39 (columna_seleccion -> MULT .)


state 16

    (40) columna_seleccion -> lista_id .
    (67) lista_id -> lista_id . COMA ID

    FROM            reduce using rule 40 (columna_seleccion -> lista_id .)
    EQ              reduce using rule 40 (columna_seleccion -> lista_id .)
    SUMA            reduce using rule 40 (columna_seleccion -> lista_id .)
    RESTA           reduce using rule 40 (columna_seleccion -> lista_id .)
    MULT            reduce using rule 40 (columna_seleccion -> lista_id .)
    DIVIDE          reduce using rule 40 (columna_seleccion -> lista_id .)
    MYQ             reduce using rule 40 (columna_seleccion -> lista_id .)
    MYE             reduce using rule 40 (columna_seleccion -> lista_id .)
    MNQ             reduce using rule 40 (columna_seleccion -> lista_id .)
    MNE             reduce using rule 40 (columna_seleccion -> lista_id .)
    NE              reduce using rule 40 (columna_seleccion -> lista_id .)
    COMA            shift and go to state 22


state 17
